--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "node -v",
     "test": "cross-env NODE_ENV=test jest --runInBand",
     "lint": "yarn lint:base ./src ./mock ./test",
-    "lint:base": "eslint --ext .js,.json"
+    "lint:base": "eslint --fix --ext .js,.json"
   },
   "repository": {
     "type": "git",
@@ -44,9 +44,9 @@
   },
   "prettier": {
     "semi": true,
-    "singleQuote": true,
     "tabWidth": 2,
-    "printWidth": 80,
+    "singleQuote": true,
+    "printWidth": 100,
     "trailingComma": "all"
   },
   "lint-staged": {
@@ -78,9 +78,9 @@
   "devDependencies": {
     "codecov": "^3.8.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
