--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "trailingComma": "all"
   },
   "lint-staged": {
-    "src/**/*.{ts,js,json}": [
+    "src/**/*.{js,json}": [
       "yarn lint:base --fix",
       "git add"
     ]
