--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "signale-logger": "^1.5.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
-    "xss": "^1.0.8"
+    "xss": "^1.0.8",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "codecov": "^3.8.1",
