--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
