--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jest-extended": "^0.11.5",
     "lint-staged": "^10.5.4",
     "mock-json-server": "^1.3.6",
+    "nock": "^13.0.7",
     "prettier": "^2.1.1",
     "supertest": "^6.1.3"
   }
